fix: rendering of the dishes titles
dishes titles wrap when the container is too small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,15 +378,17 @@ li {
 .dish:hover .dish__icon-container {
   margin-right: 0;
 }
+.dish:hover .dish__title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .dish__heading {
   overflow: hidden;
   width: 100%;
   margin: 15px 20px 15px 10px;
 }
 .dish__title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   margin-right: 43px;
 }
 .dish__info-container {
